Update SCRIPT_URL with actual Apps Script URL

--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
   <script>
     // Buraya Apps Script Web App URL'ini yapıştır:
     // Örn: https://script.google.com/macros/s/....../exec
-    const SCRIPT_URL = "PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzzJpJaBs496mADChnb7qlKivlahaSVnPphtY-gfenDbQKTDMg7jlxY6HfupjgdLhDb/exec";
+
 
     const questions = [
       {
